@@ -1,3 +1,6 @@
+    - add currying to handles #46
+    - not after/before/around works well with methods who receive a block
+
 0.0.15 - 2013-02-07
     - after, before, around now accept more than one method name
     - add basic event support #45
